# vm-rust-m4

./: Cargo.toml  README.md  cmd.txt  prepare_cloud_image.sh  vm_config.json
src/: config.rs  init.rs  main.rs  terminal.rs  vm.rs
