[package]
name = "vm-rust-m4"
version = "0.1.0"
edition = "2021"

[dependencies]
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
cocoa = "0.25"
core-graphics = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
block = "0.1"

[build-dependencies]
cc = "1.0"