[package]
name = "vm-rust-m4"
version = "0.2.0"
edition = "2021"

[dependencies]
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
cocoa = "0.25"
core-graphics = "0.23"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
block = "0.1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
cc = "1.0"
